--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,17 @@
   border-bottom: solid #288ba8;
 }
 
+.hamburguesa{
+    height: 100%;
+    width: 70px;
+    text-align: center;
+    display: none;
+}
+
+.hamburguesa img{
+    vertical-align: top;
+}
+
 /*fin header*/
 
 .footer{
@@ -98,4 +109,28 @@
 
 .icon:hover{
   transform: scale(1.1);
+}
+
+@media screen and (max-width: 800px) {
+    .hamburguesa{
+        display: block;
+    }
+
+    .ul__link{
+        position: fixed;
+        left: 0;
+        top: 60px;
+        width: 70%;
+        height: 100vh;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+        transform: translateX(-100%);
+        background-color: #000;
+    }
+
+    .enlaces2{
+        transform: translateX(0%);
+    }
 }
