--- a/css/vender.css
+++ b/css/vender.css
@@ -1,53 +1,65 @@
-.main-div-container{
-  display: grid;
+.main{
   margin-top: 70px;
-  margin-bottom: -20px;
-  grid-template-columns: 450px 1fr;
+  display: flex;
+  justify-content: space-between;
 }
 
-.ventas-desc, .ventas-title{
+.div__form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin: 0 20px;
+}
+
+.form input, select{
+  padding: 15px;
+}
+
+.form textarea{
+  resize: none;
+}
+
+.button{
+  width: 100px;
   text-align: center;
-  padding: 0 20px;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 6px;
+  color: #fff;
+  border: none;
+  background-color: lightblue;
 }
 
-.img-container img{
+.button:hover{
+  background-color: #0000ff;
+}
+
+.div__img{
+  display: flex;
+  margin-bottom: -20px;
+}
+
+.img{
   width: 100%;
-  height: 100%;
-  background-size: center;
 }
 
-.ventas-container{
-  display: grid;
-  grid-template-rows: 150px 1fr;
-}
+@media (max-width: 800px){
+  .div__img{
+    display: none;
+  }
 
-.ventas-title{
-  margin: 20px 0;
-}
+  .div__form{
+    width: 90%;
+  }
 
-textarea {
-    resize: none;
-}
-
-.form-container{
-  display: grid;
-  /* grid-auto-rows: 1fr; */
-  grid-template-rows: repeat(7, 50px) 150px 50px;
-  gap: 2rem;
-  padding: 0 20px;
-}
-
-button {
-    background-color: lightblue;
-    justify-self: center;
-    padding: 0 75px;
-    border: none;
-    color: #fff;
-    border-radius: 6px;
-    transition: background-color 0.3s ease;
-    margin-bottom: 10px;
-}
-
-button:hover {
-    background-color: rgb(0, 0, 255);
+  .main{
+    display: flex;
+    justify-content: center;
+  }
 }
